# wasm-tools

./: .gitignore  aggregate.sh  test.sh
crates/wasm-mutate/: Cargo.toml
crates/wasm-mutate/src/: error.rs  info.rs  lib.rs  mutators.rs
crates/wasm-mutate/src/module/: mod.rs
crates/wasm-mutate/src/mutators/: add_function.rs  add_type.rs  codemotion.rs  custom.rs  modify_data.rs  modify_init_exprs.rs  peephole.rs  remove_item.rs  remove_section.rs  rename_export.rs
crates/wasm-mutate/src/mutators/codemotion/: if_complement.rs  loop_unrolling.rs
crates/wasm-mutate/src/mutators/peephole/: mod.rs  rules.rs  unfold_constant.rs
crates/wasm-mutate/src/mutators/peephole/dfg/: mod.rs
crates/wasm-mutate/src/mutators/peephole/eggsy/: analysis.rs  lang.rs  mod.rs
crates/wasm-mutate/src/mutators/peephole/eggsy/encoder/: expr2wasm.rs  mod.rs  rebuild.rs
crates/wasm-smith/src/: lib.rs
crates/wasmparser/src/: lib.rs  validator.rs
egraphs-data-scripts/: aggregate_module_coverage.py  plot_progression.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: egraphs-coverage.rs
