[package]
name = "wasm-mutate"
version = "0.1.0"
edition = "2018"

[dependencies]
structopt = { optional = true, version = "0.3" }
thiserror = "1.0.28"
wasmparser = { version = "0.81", path = "../wasmparser" }
wasm-encoder = { version = "0.8.0", path = "../wasm-encoder"}
rand = { version = "0.7.3", features = ["small_rng"] }
log = "0.4.14"
egg = "0.6.0"

[dev-dependencies]
anyhow = "1"
wat = { version = "1", path = "../wat" }
wasmprinter = { path = "../wasmprinter" }
env_logger = "0.8"

[features]
peep-commute = []
peep-idem = []
peep-assoc = []
peep-strength = []
peep-select-flip = []
peep-drop = []
peep-neutral = []
peep-globals = []
peep-unfold = []
peep-non-semantics = []
motion-mutator = []
all = ['peep-commute', 'peep-idem', 'peep-assoc', 'peep-strength', 'peep-select-flip', 'peep-drop', 'peep-neutral', 'peep-globals', 'peep-unfold', 'peep-non-semantics', 'motion-mutator']
default=['all']