[package]
name = "wasm-mutate"
version = "0.2.5"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wasm-mutate"
description = "A WebAssembly test case mutator"

[dependencies]
clap = { optional = true, version = "3.0", features = ['derive'] }
thiserror = "1.0.28"
wasmparser = { version = "0.87.0", path = "../wasmparser" }
wasm-encoder = { version = "0.14.0", path = "../wasm-encoder"}
rand = { version = "0.8.0", features = ["small_rng"] }
log = "0.4.14"
egg = "0.6.0"

[dev-dependencies]
anyhow = "1"
wat = { path = "../wat" }
wasmprinter = { path = "../wasmprinter" }
env_logger = "0.9"


[features]
default = ["all"]
all = [ "peep_hole", "code_motion", "function_body_unreachable", "modify_data", "modify_init_exprs", "remove_exports", "remove_section", "rename_exports", "snip_function", "add_function", "add_type", "modify_custom_section", "peep_hole_all", "remove_item_all"]

peep_hole = [ ]
peep_hole_all = ['peep_hole'] # add the others
# TODO, add here the peep_hole ones based on the type of the rules

code_motion = [ "code_motion_loops", "code_motion_ifs" ]
code_motion_ifs = []
code_motion_loops = []

add_function = []
add_type = []

modify_custom_section = []
modify_custom_section_name = []
modify_custom_section_data = []

function_body_unreachable = []
modify_data = []
modify_init_exprs = []
remove_exports = []

remove_item = [] # make them exclusive always 
remove_item_all = ["remove_item", "remove_item_function", "remove_item_table", "remove_item_memory", "remove_item_data", "remove_item_element", "remove_item_type", "remove_item_tag", "remove_item_global"]
remove_item_function = []
remove_item_table = []
remove_item_memory = []
remove_item_global = []
remove_item_tag = []
remove_item_type = []
remove_item_data = []
remove_item_element = []

remove_section = ["remove_section_custom", "remove_section_empty"] # We dont need to exclude here, since we have only two options
remove_section_custom = []
remove_section_empty = []

rename_exports = []
snip_function = []