[package]
name = "wasm-mutate"
version = "0.2.27"
edition.workspace = true
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wasm-mutate"
description = "A WebAssembly test case mutator"

[dependencies]
clap = { workspace = true, optional = true }
thiserror = "1.0.28"
wasmparser = { workspace = true }
wasm-encoder = { workspace = true }
rand = { workspace = true }
log = { workspace = true }
egg = "0.6.0"

[dev-dependencies]
anyhow = { workspace = true }
wat = { path = "../wat" }
wasmprinter = { path = "../wasmprinter" }
env_logger = { workspace = true }


[features]
default = ["peephole-small"]
# If enabled, symetric transformations wont be applied. E.g., loop unrolling
asymmetric = []
# If enabled, custom sections wont be transformed
no-custom-section = []
# If enabled, the peephole mutation depth is 50
peephole-large = []
# If enabled, the peephole mutation depth is 5
peephole-medium = []
# If enabled, the peephole mutation depth is 2 (the default one)
peephole-small = []
# Experimental transformation for random access to memory
random-access = []
# If enabled, only transformation leading to runtime behavior will be applied
runtime-only = [ "asymmetric", "no-custom-section", "random-access"]
